--- a/css/styles-panel.css
+++ b/css/styles-panel.css
@@ -13,14 +13,14 @@ body,html{
 
 nav{
     width:15%;
-    background:#1d2b36;
+    background:#ced4da;
     height:100%;
     float:left;
 }
 
 section{
     width:85%;
-    background:#eff3f4;
+    background:#f8f9fa;
     height:100%;
     float:right;
 }
@@ -33,43 +33,66 @@ main{
 #panel-global{
     width:100%;
     height:20px;
-    background:#16aad8;
 }
 
 #panel-seccion{
     width:100%;
-    height:60px;
-    background:#f6f8f7;
+    height:30px;
+    background:#495057;
     box-shadow:0px 1px 2px rgba(0,0,0,0.3);
 }
 
-#panel-seccion img{
-    width: 50px;
-    float: left;
+nav img{
+    width: 85px;
     padding: 10px;
+    display: block;
+    margin: auto;
 }
 
 h1{
     font-size:20px;
-    color:#9e9fa1;
+    color:#f8f9fa;
+    margin-left: 20px;
 }
 
 h2{
     font-size:16px;
-    color:#9e9fa1;
+    color:#495057;
+}
+
+nav h2{
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 0px 5px;
 }
 
 main nav ul li a{
-    color: white;
+    color: black;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+main nav ul li:hover{
+    background: #6c757d;
+}
+
+nav ul li{
+    padding:10px;
+    border-bottom:1px solid grey;
+}
+
+.titulo-tabla{
+    margin: 16px 0 0 16px;
+    color: black;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 table{
     border:1px solid grey;
-    font-family:Open Sans, sans-serif;
     border-collapse: collapse;
     width:95%;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin: 16px;
 }
     
 table tr td,table tr th{
@@ -79,10 +102,50 @@ table tr td,table tr th{
 }
 
 table tr:nth-child(odd){
-    background:rgb(220,220,220);
+    background:#ced4da;
 }
 
 table tr:nth-child(1){
     background:black;
     color:white;
+}
+
+button{
+    padding:5px;
+    width:100%;
+    border:0px;
+    border-radius:8px;
+    font-size: 1rem;
+    box-shadow:0px 2px 4px rgba(0,0,0,0.3);
+}
+
+.botonmodificar{
+    background:#E4A11B;
+}
+
+.botonborrar{
+    background:#DC4C64;
+}
+
+.botoninsertar{
+    background:#14A44D;
+    width:200px;
+    margin:16px;
+}
+
+.botonvolver{
+    background:#54B4D3;
+    width:200px;
+    margin:16px;
+}
+
+form{
+    padding:20px;
+}
+    
+form input{
+    width:100%;
+    padding-top:5px;
+    padding-bottom:5px;
+    margin-top:20px;
 }
